Refactor GTN_MagicGenerator